samples/_failures_safe/1761629121_46ae1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f811caec.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f811caec.c:193:21: error: expected ‘;’ at end of input
  193 |         token->value
      |                     ^
      |                     ;
./samples/SAFE/__tmp_f811caec.c:193:9: error: expected declaration or statement at end of input
  193 |         token->value
      |         ^~~~~
./samples/SAFE/__tmp_f811caec.c:193:9: error: expected declaration or statement at end of input
